is fulled css and html section all-projects

--- a/css/estilos-all-projects.scss
+++ b/css/estilos-all-projects.scss
@@ -185,6 +185,17 @@ a {
     }
   }
 }
+/*Styles modals projects*/
+.modal{
+  .modal-body{
+    .imgModal{
+      display: block;
+      width: 300px;
+      margin: 0px auto;
+    }
+  }
+}
+
 
 footer {
   background-color: black;
