--- a/css/estilos-all-projects.scss
+++ b/css/estilos-all-projects.scss
@@ -38,7 +38,7 @@ a {
 
 .fondo-menu {
   padding: 0.8rem 0;
-  background: #777;
+  background: #777 !important;
   transition: all 300ms;
 }
 
@@ -275,6 +275,9 @@ footer {
   .navbar-expand-lg .navbar-nav .nav-item {
     margin: 10px;
     border: none;
+  }
+  .fixed-top {
+    background:transparent;
   }
   .header-all-projects {
     background: url("../img/imgProjectsDesktop.jpg") no-repeat center top;
