--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -96,19 +96,13 @@ header {
       text-align: center;
       width: 55%;
     }
-    button {
+    .btn {
       background-color: $secondary;
       font-weight: bold;
+      color: #212529;
+      text-decoration: none;
       transition: all 300ms;
-      a {
-        color: #212529;
-        text-decoration: none;
-        transition: all 300ms;
-        &:hover {
-          color: #555;
-          cursor: pointer;
-        }
-      }
+      transition: all 300ms;
       &:hover {
         color: #555;
         cursor: pointer;
@@ -257,6 +251,17 @@ header {
   color: $primary;
   text-align: center;
 
+  h4{
+    a{
+      text-decoration: none;
+      transition: all 300ms;
+      &:hover{
+        cursor: pointer;
+        opacity: .5;
+      }
+    }
+  }
+
   .owl-nav {
     margin-top: 30px;
     color: $third;
@@ -379,8 +384,6 @@ footer {
 /*Media Querys*/
 
 @media (max-width: 394px) {
-
-
   .navbar-collapse {
     flex-basis: 100%;
     flex-grow: 1;
@@ -461,7 +464,7 @@ footer {
   }
 }
 
-@media (min-width:400px ) and (max-width: 767px) {
+@media (min-width: 400px) and (max-width: 767px) {
   .imgSalutation,
   .social-media {
     display: none;
@@ -472,7 +475,7 @@ footer {
   }
 }
 
-@media (min-width:768px ) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .navbar-collapse {
     flex-basis: 100%;
     flex-grow: 1;
@@ -515,9 +518,9 @@ footer {
 
   /*Skills Styles*/
 
-  .skills{
-    .skill{
-      .imgSkill{
+  .skills {
+    .skill {
+      .imgSkill {
         width: 70%;
         line-height: 47px;
       }
